--- a/_pgbackup/assets/css/main_1669898381.css
+++ b/_pgbackup/assets/css/main_1669898381.css
@@ -810,6 +810,10 @@ body {
     .\-1u\28xlarge\29  {
         margin-left: 8.3333333333%;
     }
+
+    .fire {
+        width: 110%;
+    }
 }
 
 @media screen and (max-width: 1140px) {
@@ -1259,6 +1263,10 @@ body {
 
     .\-1u\28medium\29  {
         margin-left: 8.3333333333%;
+    }
+
+    .fire {
+        width: 90%;
     }
 }
 
@@ -2595,7 +2603,7 @@ ul.actions {
 
 ul.actions li {
     display: inline-block;
-    padding: 0 1em 0 0;
+    padding: 0 0em 0 0;
     vertical-align: middle;
 }
 
@@ -3170,7 +3178,7 @@ body.is-loading #header:after {
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255);
     text-align: center;
 }
 
@@ -3179,7 +3187,7 @@ body.is-loading #header:after {
 }
 
 #footer a:hover {
-    color: #ffffff;
+    color: #016135;
 }
 
 #footer b,
@@ -3270,6 +3278,7 @@ body.is-loading #header:after {
     list-style: none;
     margin: 2em 0 0;
     padding: 0;
+    font-weight: bold;
 }
 
 #footer .copyright li {
@@ -3573,8 +3582,17 @@ body.is-loading #header:after {
     #footer {
         padding: 2em 1em 2em 1em ;
     }
+
+    #fire {
+        width: 100%;
+    }
 }
 
 .tokenomics {
     width: 73%;
+}
+
+.fa-brands,
+.fa-solid {
+    font-size: 1.3em;
 }
