--- a/_pgbackup/assets/css/main_1670502720.css
+++ b/_pgbackup/assets/css/main_1670502720.css
@@ -810,6 +810,10 @@ body {
     .\-1u\28xlarge\29  {
         margin-left: 8.3333333333%;
     }
+
+    #fire {
+        width: 110%;
+    }
 }
 
 @media screen and (max-width: 1140px) {
@@ -1035,6 +1039,10 @@ body {
     .\-1u\28large\29  {
         margin-left: 8.3333333333%;
     }
+
+    #fire {
+        width: 90%;
+    }
 }
 
 @media screen and (max-width: 980px) {
@@ -1259,6 +1267,10 @@ body {
 
     .\-1u\28medium\29  {
         margin-left: 8.3333333333%;
+    }
+
+    .fire {
+        width: 90%;
     }
 }
 
@@ -2595,7 +2607,7 @@ ul.actions {
 
 ul.actions li {
     display: inline-block;
-    padding: 0 1em 0 0;
+    padding: 0 0em 0 0;
     vertical-align: middle;
 }
 
@@ -3133,7 +3145,7 @@ button:disabled,
     -webkit-transition: opacity 1s ease;
     -ms-transition: opacity 1s ease;
     transition: opacity 1s ease;
-    background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+    background-image: linear-gradient(45deg, #052f21, #009e3b);
     content: '';
     height: 100%;
     left: 0;
@@ -3357,6 +3369,10 @@ body.is-loading #header:after {
         padding: 4em 0 4em 0 ;
         background-attachment: scroll;
     }
+
+    #fire {
+        width: 100%;
+    }
 }
 
 /* Medium */
@@ -3395,6 +3411,10 @@ body.is-loading #header:after {
     /* Two */
     #two {
         text-align: center;
+    }
+
+    #fire {
+        width: 100%;
     }
 }
 
@@ -3471,6 +3491,10 @@ body.is-loading #header:after {
     /* Footer */
     #footer {
         padding: 3em 1.5em 3em 1.5em ;
+    }
+
+    #fire {
+        width: 100%;
     }
 }
 
@@ -3550,6 +3574,10 @@ body.is-loading #header:after {
     #footer .copyright li:first-child {
         margin-top: 0;
     }
+
+    #fire {
+        width: 100%;
+    }
 }
 
 /* XXSmall */
@@ -3573,6 +3601,10 @@ body.is-loading #header:after {
     /* Footer */
     #footer {
         padding: 2em 1em 2em 1em ;
+    }
+
+    #fire {
+        width: 100%;
     }
 }
 
