--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3145,7 +3145,7 @@ button:disabled,
     -webkit-transition: opacity 1s ease;
     -ms-transition: opacity 1s ease;
     transition: opacity 1s ease;
-    background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+    background-image: linear-gradient(45deg, #052f21, #009e3b);
     content: '';
     height: 100%;
     left: 0;
